; ModuleID = '/home/carl/AnghaBench/linux/fs/nfs/extr_pagelist.c_nfs_page_group_sync_on_bit.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nfs/extr_pagelist.c_nfs_page_group_sync_on_bit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfs_page = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nfs_page_group_sync_on_bit(%struct.nfs_page* %0, i32 %1) #0 {
  %3 = alloca %struct.nfs_page*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.nfs_page* %0, %struct.nfs_page** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.nfs_page*, %struct.nfs_page** %3, align 8
  %7 = call i32 @nfs_page_group_lock(%struct.nfs_page* %6)
  %8 = load %struct.nfs_page*, %struct.nfs_page** %3, align 8
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @nfs_page_group_sync_on_bit_locked(%struct.nfs_page* %8, i32 %9)
  store i32 %10, i32* %5, align 4
  %11 = load %struct.nfs_page*, %struct.nfs_page** %3, align 8
  %12 = call i32 @nfs_page_group_unlock(%struct.nfs_page* %11)
  %13 = load i32, i32* %5, align 4
  ret i32 %13
}

declare dso_local i32 @nfs_page_group_lock(%struct.nfs_page*) #1

declare dso_local i32 @nfs_page_group_sync_on_bit_locked(%struct.nfs_page*, i32) #1

declare dso_local i32 @nfs_page_group_unlock(%struct.nfs_page*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
